@@ -44,6 +44,7 @@ my $Options = {
     ignore_re                => [],
     launch                   => 0,
     make                     => $Config{make},
+    prefer_lib               => 0,
     report                   => [],
     report_c0                => 75,
     report_c1                => 90,
@@ -78,6 +79,7 @@ sub get_options {
                        launch!
                        make=s
                        outputdir=s
+                       prefer_lib!
                        report_c0=s
                        report_c1=s
                        report_c2=s
@@ -317,6 +319,7 @@ sub main {
     print "Reading database from $dbname\n" unless $Options->{silent};
     my $db = Devel::Cover::DB->new(
         db               => $dbname,
+        prefer_lib       => $Options->{prefer_lib},
         uncoverable_file => $Options->{uncoverable_file},
     );
     $db = $db->merge_runs;
@@ -481,6 +484,7 @@ The following command line options are supported:
  -test                 - drop database(s) and run make test (default off)
  -gcov                 - run gcov to cover XS code     (default on if using gcc)
  -make make_prog       - use the given 'make' program for 'make test'
+ -prefer_lib           - prefer files in lib                (default off)
 
  -add_uncoverable_point    string
  -delete_uncoverable_point string
@@ -582,6 +586,9 @@ in recent Perl distributions.
 The C<-gcov> option will try to run gcov on any XS code.  This requires that
 you are using gcc of course.  If you are using the C<-test> option will be
 turned on by default.
+
+The C<-prefer_lib> option tells Devel::Cover to report on files in the lib
+directory even if they were used from the blib directory.
 
 =head1 EXIT STATUS
 
