@@ -12,6 +12,7 @@ Devel::Cover history
  - Add test for string eval (Sebastian Paaske Tørholm) (github 145)
  - Improve uncoverable tests and docs (Kevin Brannen) (github 167)
  - The cover program accepts multiple reports (Eden Hochbaum) (github 172)
+ - Add -prefer_lib option to cover script (Kent Fredric) (github 91)
 
 Release 1.26 - 24 July 2017
  - Untaint $DEVEL_COVER_OPTIONS (Alexey Sokolov) (github 187)
